--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     role_hierarchy:
         ROLE_STRUCTURE: ROLE_USER
-        ROLE_CLIENT: ROLE_USER
+        ROLE_PARTNER: ROLE_USER
         ROLE_ADMIN: ROLE_USER
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
@@ -35,8 +35,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/partner, roles: ROLE_PARTNER }
+        - { path: ^/structure, roles: ROLE_STRUCTURE }
+        - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
